--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -6,6 +6,16 @@ spring:
     active: dev
   main:
     allow-circular-references: true
+
+  sky:
+    datasource:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      host: localhost
+      port: 3306
+      database: sky_take_out
+      username: root
+      password: 20050901Fzh,,
+
   datasource:
     druid:
       driver-class-name: ${sky.datasource.driver-class-name}
